# WEB_HW_13_part-2

./: pyproject.toml
hw_project/: db.sqlite3
hw_project/hw_project/: settings.py  urls.py
hw_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw_project/quotes/migrations/: 0001_initial.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/quotes/: index.html
hw_project/users/: urls.py  views.py
hw_project/users/templates/users/: login.html
hw_project/utils/: add_quotes_to_mongodb.py  migration.py
